Updated/edited the Help Text for program impacts, research topics, outcomes and outputs.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -238,11 +238,10 @@ programImpact.message.historyNotFound=History not found.
 programImpact.message.historyVersion=History Version by {0} on {1}. Current version {2}.
 
 ## Help Text
-programImpact.help=Enter the Program Impacts for your program and then select the respective strategic objectives to which they will contribute. For each program impact, please add the intended beneficiaries.
-researchTopics.help=Enter the Research Topics for your program.
-researchOutcomes.help=Enter the Research Outcomes for the selected research topic and program.
-researchOutputs.help=Enter the Research Outputs for the selected Research Outcomes and program.
-
+programImpact.help=Enter the <b>Program Impact</b> for your program. For each program impact enter the <b>Target Year</b> and then select the <b>Strategic Objectives</b> to which this program impact will contribute. Also, for each research impact, please add/remove the <b>Intended Beneficiaries</b>. For each Intended Beneficiary, select the <b>Type</b> of beneficiary, <b>Focus</b> and the <b>Region</b> from the dropdowns.
+researchTopics.help=View or enter the Research Topics for the selected program.
+researchOutcomes.help=View or Enter the outcomes and milestones for your selected Research Topic. For each outcome, select the <b>Research Topic</b> to which the outcome contributes. For outcomes that include a quantifiable target, please select the unit and enter the <b>target value</b>; otherwise, please select <b>"Not Applicable"</b> for the target unit. For each outcome, enter the <b>annual milestones</b>. For milestones that include a quantifiable target, please select the <b>unit</b> and enter the <b>target value</b>; otherwise, please select <b>"Not Applicable"</b> for the target unit.
+researchOutputs.help=View or Enter the Research Outputs for the selected Research Outcomes, Research Topic and Research Program. Click on <b>Main Information</b> tab and then enter the <b>Output Name</b>, select <b>Research Topic</b> and <b>Outcomes</b> to which the output contributes. Add/remove the Next-Users for this output being entered. For each <b>Next-User</b>, select the <b>Type</b> and the corresponding <b>Sub-types</b> from the three dropdowns. Click on the <b>Partners</b> tab to enter the partners for this output. For each <b>partner</b>, select the <b>institution</b> from the dropdown and then add/remove the corresponding <b>contact</b> person. For each partner specify the type <b>Internal</b> or <b>External.</b>
 
 programImpact.objectiveValue.readText=Strategic Objectives this Program Impact will contribute
 
