Working in IP Research topics Auto save.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -226,6 +226,7 @@ researchTopic.name=Name
 ## Research topics Action
 researchTopic.action.description.required=Research Topic {0} Description
 researchTopic.action.required=Research Topic Required.
+researchTopic.action.draft=Draft
 
 ## Program Impacts
 programImpact.programImpact=Program Impact
@@ -247,6 +248,7 @@ programImpact.objectiveValue.readText=Strategic Objectives this Program Impact w
 
 ## Program Impacts Action
 programImpact.action.required= Program Impact Required.
+programImpact.action.draft= Draft
 programImpact.action.description.required=Program Impact {0} There is not a Description.
 programImpact.action.year.required=Program Impact {0} Target year not Selected.
 programImpact.action.objectiveValue.empty=Program Impact {0}, There is not a Strategic Objectives selected.
