Implement Autosave in Output section. issue #119

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -292,6 +292,7 @@ outcome.action.targetYear.required=Estimated Target year
 outcome.action.targetUnit.required=Target unit
 outcome.action.value.required=Target Value
 outcome.action.milestones=Milestones
+outcome.action.draft= Draft
 
 outcome.milestone.action.statement.required=Milestone Statement
 outcome.milestone.action.targetYear.required=Estimated Target year
@@ -315,6 +316,7 @@ output.name.readText=Output name
 output.action.nextusers=Output Next Users required
 output.action.nextusers.type=Output Next User {0} Type required
 output.action.nextusers.subType=Output Next User {0} Sub-Type required
+output.action.draft=Draft
 
 output.selectInstitution=Select a partner
 
