implement IP Submission Email. issue #122

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -357,13 +357,13 @@ email.project.unAssigned=This email is to kindly inform you that your {0} role i
 email.project.unAssigned.subject=[MARLO] {0} - profile change for the {1} project {2}
 email.outlookPassword=<Your Outlook Password> 
 ## email footer
-email.support=<p>Should you have any questions please do not hesitate to contact the MARLO team at the following e-mails: Christian Garcia (c.d.garcia@cgiar.org) or Hermes Jimenez (h.jimenez@cgiar.org), and copy David Abreu (d.abreu@cgiar.org), Hector Tobon (h.f.tobon@cgiar.org) and Sebastian Amariles (s.amariles@cgiar.org)</p>
+email.support=<p>Should you have any questions please do not hesitate to contact the MARLO team at the following e-mail: MARLOSupport@cgiar.org</p>
 email.bye=<br>Best regards, <br><br><b>MARLO Team</b> <br><br> <p>*** Please do not reply to this email as this is an automated notification ***</p>
 
 
 ## email submit impact
-impact.submit.email.subject=[MARLO] {0} Impact Pathway has been successfully submitted
-impact.submit.email.message=Dear all,<br><br>{0} has successfully submitted the  <b>{1}</b> </br></br>
+impact.submit.email.subject=[MARLO-CIAT] The Impact Pathway of {0} has been successfully submitted
+impact.submit.email.message=Dear all,</br></br>Congratulations! <b>{0}</b> has successfully submitted the <b>Impact Pathway</b> for <b>{2}</b>. The next step would be to start the monitoring of the outputs and outcomes. For the time being, you will not be able to edit this particular impact pathway until a new cycle is re-opened in MARLO CIAT.</br></br>
 
 
 
