--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -106,6 +106,15 @@ form.values.notFileUploaded=No file uploaded
 form.message.numericValue=Numeric Value
 
 
+# Concurrence messages
+message.historyNotFound=History not found.
+message.historyVersion=History Version by {0} on {1}. Current version {2}.
+message.sectionSaved=This section was updated recently by {0}. If you edit this version, it will overwrite the information saved. Please {1} to retrieve the current version.
+message.concurrence=You may not edit this section at the moment because someone is working on it.
+message.concurrenceNotEditing={0} to continue.
+message.completed=This Impact pathway seems to be complete. Please click in the "Submit" button located at the left side in order to finalize the process.
+
+
 # Log History
 logHistory.title=Log History 
 logHistory.subTitle=(The last ten changes)
