Add recover button

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -46,6 +46,7 @@ saving.read.privileges.section=You do not have sufficient privileges to modify t
 saving.add.new={0} was successfully added to the system
 saving.justification.outcome=Justification for this outcome deletion
 saving.justification.output=Justification for this output deletion
+cancel.autoSave=Version recovered
 
 
 ## Form components
@@ -104,6 +105,7 @@ form.values.required=Required
 form.values.fieldEmpty=Prefilled if available
 form.values.notFileUploaded=No file uploaded
 form.message.numericValue=Numeric Value
+form.buttons.recover=Recover
 
 
 # Concurrence messages
