--- a/marlo-ciat/marlo-ciat-web/pom.xml
+++ b/marlo-ciat/marlo-ciat-web/pom.xml
@@ -37,6 +37,7 @@
 		<log-properties>0.9.28</log-properties>
 		<javax-mail.version>1.5.5</javax-mail.version>
 		<com.sun.mail.version>1.5.5</com.sun.mail.version>
+		<pentaho-report.version>6.1.0.1-196</pentaho-report.version>
 	</properties>
 	<issueManagement>
 		<system>Github issue tracker</system>
@@ -274,6 +275,126 @@
 			<artifactId>pusher-http-java</artifactId>
 			<version>${pusher-http-java}</version>
 		</dependency>
+
+		<!-- Dependency for pentaho -->
+		<dependency>
+			<groupId>pentaho-reporting-engine</groupId>
+			<artifactId>pentaho-reporting-engine-classic-core</artifactId>
+			<version>${pentaho-report.version}</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>pentaho-reporting-engine</groupId>
+			<artifactId>pentaho-reporting-engine-classic-extensions</artifactId>
+			<version>${pentaho-report.version}</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libbase</artifactId>
+			<version>${pentaho-report.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libdocbundle</artifactId>
+			<version>${pentaho-report.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libfonts</artifactId>
+			<version>${pentaho-report.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libformat</artifactId>
+			<version>${pentaho-report.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libformula</artifactId>
+			<version>${pentaho-report.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libloader</artifactId>
+			<version>${pentaho-report.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>librepository</artifactId>
+			<version>${pentaho-report.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libserializer</artifactId>
+			<version>${pentaho-report.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libxml</artifactId>
+			<version>${pentaho-report.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libswing</artifactId>
+			<version>${pentaho-report.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>2.1.7</version>
+		</dependency>
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext-rtf</artifactId>
+			<version>2.1.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.beanshell</groupId>
+			<artifactId>bsh</artifactId>
+			<version>1.3.0</version>
+			<optional>true</optional>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/bsf/bsf -->
+		<dependency>
+			<groupId>bsf</groupId>
+			<artifactId>bsf</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libsparkline</artifactId>
+			<version>${pentaho-report.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.barbecue</groupId>
+			<artifactId>barbecue</artifactId>
+			<version>1.5-beta1</version>
+		</dependency>
+		<dependency>
+			<groupId>pentaho-reporting-engine</groupId>
+			<artifactId>pentaho-reporting-engine-legacy-charts</artifactId>
+			<version>${pentaho-report.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>pentaho-report-designer</groupId>
+			<artifactId>report-designer-ext-legacy-charts</artifactId>
+			<version>${pentaho-report.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/jfree/jfreechart -->
+		<dependency>
+			<groupId>jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.0.13</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/jfree/jcommon -->
+		<dependency>
+			<groupId>jfree</groupId>
+			<artifactId>jcommon</artifactId>
+			<version>1.0.16</version>
+		</dependency>
 	</dependencies>
 
 	<!-- Profile configuration -->
@@ -320,6 +441,7 @@
 					<httpsPort>8443</httpsPort>
 					<keystoreFile>${project.basedir}/.keystore</keystoreFile>
 					<keystorePass>d5jtY68oBqWj</keystorePass>
+					<contextFile>tomcat/context.xml</contextFile>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -409,6 +531,11 @@
 			<id>Internal project repo</id>
 			<url>file://${basedir}/src/main/resources/libs/</url>
 		</repository>
+		<!-- Pentaho Maven repo -->
+    <repository>
+      <id>pentaho-releases</id>
+      <url>http://repository.pentaho.org/artifactory/repo/</url>
+    </repository>
 	</repositories>
 	<licenses>
 		<license>
