--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/WEB-INF/web.xml
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
   <display-name>Struts Blank</display-name>
-
+  
+<resource-ref>
+      <description>MARLO Connection</description>
+      <res-ref-name>MARLO</res-ref-name>
+      <res-type>javax.sql.DataSource</res-type>
+      <res-auth>Container</res-auth>
+  </resource-ref>
   <listener>
     <listener-class>
       org.cgiar.ccafs.marlo.security.SessionCounter
@@ -24,6 +30,11 @@
     <!--  Hibernate listener  -->
    <listener>
     <listener-class>org.cgiar.ccafs.marlo.config.HibernateListener</listener-class>
+  </listener>
+  
+  <!--  Pentaho listener  -->
+   <listener>
+    <listener-class>org.cgiar.ccafs.marlo.config.PentahoListener</listener-class>
   </listener>
   
   <!-- Google Guice integration with our web application -->
