--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -158,6 +158,9 @@ header.logout=Logout
 menu.login=Login
 menu.home=Home
 menu.impactPathway=Impact Pathway
+menu.monitoring=Monitoring
+menu.monitoring.projects=Projects
+menu.monitoring.outcomes=Outcomes
 menu.admin=Center Admin
 menu.superadmin=System Admin
 menu.projects=Projects
