--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -339,6 +339,15 @@ output.selectInstitution=Select a partner
 output.action.partner.required=Select a partner
 output.action.partner.user=Output Partner {0} user required
 
+## Monitoring - Project List
+projectsList.projectids=ID
+projectsList.projectTitles=Project title
+projectsList.projectOutputs=Outputs
+projectsList.contactPerson=Contact person
+projectsList.startDate=Start date
+projectsList.endDate=End date
+projectsList.projectTitles.none=Null
+
 
 
 ## email dear
