Working on project description

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -348,7 +348,14 @@ projectsList.startDate=Start date
 projectsList.endDate=End date
 projectsList.projectTitles.none=Null
 
+## Monitoring - Projects menu
+projects.menu.description=Description
+projects.menu.partners=Partners
+projects.menu.deliverables=Deliverables
 
+## Monitoring - Project Description
+projectDescription.title=Project Description
+projectDescription.crossCuttingDimensions=Cross cutting theme
 
 ## email dear
 email.dear=Dear {0}, <br><br>
