Funding sources in project description

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -354,8 +354,10 @@ projects.menu.partners=Partners
 projects.menu.deliverables=Deliverables
 
 ## Monitoring - Project Description
+projectDescription.help=
 projectDescription.title=Project Description
 projectDescription.crossCuttingDimensions=Cross cutting theme
+projectDescription.notFundingSource=There are not funding source(s) added yet.
 
 ## email dear
 email.dear=Dear {0}, <br><br>
