--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -358,6 +358,7 @@ projectDescription.help=
 projectDescription.title=Project Description
 projectDescription.crossCuttingDimensions=Cross cutting theme
 projectDescription.notFundingSource=There are not funding source(s) added yet.
+projectDescription.notOutputs=There are not output(s) added yet.
 
 ## email dear
 email.dear=Dear {0}, <br><br>
