--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -359,6 +359,16 @@ projectDescription.title=Project Description
 projectDescription.crossCuttingDimensions=Cross cutting theme
 projectDescription.notFundingSource=There are not funding source(s) added yet.
 projectDescription.notOutputs=There are not output(s) added yet.
+projectDescription.name=Title
+projectDescription.shortName=CIAT short name
+projectDescription.pl=Pl
+projectDescription.startDate=Star date
+projectDescription.endDate=End date
+projectDescription.contactPerson=Project contact(Project leader)
+projectDescription.fundingSource=Funding Source(s)
+projectDescription.crossCutting=Cross cutting theme
+projectDescription.outputs=Project output(s)
+projectDescription.notOutputs=There are not output(s) added yet.
 
 ## email dear
 email.dear=Dear {0}, <br><br>
@@ -407,6 +417,8 @@ projectBudgetCofinaning.requeried.amount=Institution {0}: Project Bilateral P{1}
 research.area.menu=Research Programs
 
 breadCrumb.menu.home=Home
+breadCrumb.menu.projectsList=Projects List
+breadCrumb.menu.projectDescription=Project Description
 
 #Delete
 deleting.success=Deleted successfully.
