Working in Project Description validator. issue #156

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -339,6 +339,8 @@ output.selectInstitution=Select a partner
 output.action.partner.required=Select a partner
 output.action.partner.user=Output Partner {0} user required
 
+## MONITORING - PROJECTS----
+
 ## Monitoring - Project List
 projectsList.projectids=ID
 projectsList.projectTitles=Project title
@@ -368,7 +370,17 @@ projectDescription.contactPerson=Project contact(Project leader)
 projectDescription.fundingSource=Funding Source(s)
 projectDescription.crossCutting=Cross cutting theme
 projectDescription.outputs=Project output(s)
-projectDescription.notOutputs=There are not output(s) added yet.
+## Missing Fields
+projectDescription.action.title=Project Description
+projectDescription.action.shortName=Project CIAT Short name
+projectDescription.action.startDate=Star date
+projectDescription.action.endDate=End date
+projectDescription.action.projectLeader=Project Leader
+projectDescription.action.crossCuttingDimensions=Cross cutting theme
+projectDescription.action.fundingSources=There are not funding source(s) added yet.
+projectDescription.action.fundingSources.fundingSourceType.id= Funding Source {0} Type.
+projectDescription.action.fundingSources.fundingSourceType.donor= Funding Source {0} Donor.
+projectDescription.actio.outputs=There are not output(s) added yet.
 
 ## email dear
 email.dear=Dear {0}, <br><br>
