Interface Project List.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -345,10 +345,10 @@ output.action.partner.user=Output Partner {0} user required
 projectsList.projectids=ID
 projectsList.projectTitles=Project title
 projectsList.projectOutputs=Outputs
-projectsList.contactPerson=Contact person
+projectsList.projectLeader=Leader
 projectsList.startDate=Start date
 projectsList.endDate=End date
-projectsList.projectTitles.none=Null
+projectsList.none=Not defined
 
 ## Monitoring - Projects menu
 projects.menu.description=Description
