Add Additional Funding source Information. issue #157

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -380,6 +380,8 @@ projectDescription.action.crossCuttingDimensions=Cross cutting theme
 projectDescription.action.fundingSources=There are not funding source(s) added yet.
 projectDescription.action.fundingSources.fundingSourceType.id= Funding Source {0} Type.
 projectDescription.action.fundingSources.fundingSourceType.donor= Funding Source {0} Donor.
+projectDescription.action.fundingSources.fundingSourceType.title= Funding Source {0} Title.
+projectDescription.action.fundingSources.fundingSourceType.ocs= Funding Source {0} OCS Code.
 projectDescription.actio.outputs=There are not output(s) added yet.
 
 ## email dear
