Added fields: Principal investigator, OCS code and title - project description

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -363,7 +363,7 @@ projectDescription.notFundingSource=There are not funding source(s) added yet.
 projectDescription.notOutputs=There are not output(s) added yet.
 projectDescription.name=Title
 projectDescription.shortName=CIAT short name
-projectDescription.pl=Pl
+projectDescription.pl=PI(Principal Investigator)
 projectDescription.startDate=Star date
 projectDescription.endDate=End date
 projectDescription.contactPerson=Project contact(Project leader)
