Wokring on deliverable list - monitoring

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -384,6 +384,14 @@ projectDescription.action.fundingSources.fundingSourceType.title= Funding Source
 projectDescription.action.fundingSources.fundingSourceType.ocs= Funding Source {0} OCS Code.
 projectDescription.actio.outputs=There are not output(s) added yet.
 
+## Monitoring -- project key deliverables
+deliverableList.deliverablesids=ID
+deliverableList.deliverablesName=Name
+deliverableList.deliverablesType=Deliverable Type
+deliverableList.deliverablesStartDate=Start year
+deliverableList.deliverablesEndDate=End year
+deliverableList.deliverablesRemove=Remove
+
 ## email dear
 email.dear=Dear {0}, <br><br>
 email.newUser.part1=You have been assigned a user profile in the MARLO platform\n\n
