--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -391,6 +391,7 @@ deliverableList.deliverablesType=Deliverable Type
 deliverableList.deliverablesStartDate=Start year
 deliverableList.deliverablesEndDate=End year
 deliverableList.deliverablesRemove=Remove
+deliverableList.none=Not defined
 
 ## email dear
 email.dear=Dear {0}, <br><br>
