--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -219,6 +219,7 @@ breadCrumb.menu.outcomesList=Outcomes List
 breadCrumb.menu.outcome=Outcome
 breadCrumb.menu.outputsList=Outputs List
 breadCrumb.menu.output=Output
+ breadCrumb.menu.deliverables=Deliverable list
 
 ## IMPACT PATHWAY----
 
@@ -392,7 +393,7 @@ deliverableList.deliverablesStartDate=Start year
 deliverableList.deliverablesEndDate=End year
 deliverableList.deliverablesRemove=Remove
 deliverableList.none=Not defined
-
+deliverableList.help=
 ## email dear
 email.dear=Dear {0}, <br><br>
 email.newUser.part1=You have been assigned a user profile in the MARLO platform\n\n
