Deliverable validator. issue #164

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -394,6 +394,14 @@ deliverableList.deliverablesEndDate=End year
 deliverableList.deliverablesRemove=Remove
 deliverableList.none=Not defined
 deliverableList.help=
+## Missing Fields
+deliverable.action.deliverablesName=Name
+deliverable.action.deliverablesType=Deliverable Type
+deliverable.action.deliverablesStartDate=Start year
+deliverable.action.deliverablesEndDate=End year
+deliverable.action.documents=There are not Document(s) added yet.
+deliverable.action.documents.link= Document {0} Link.
+
 ## email dear
 email.dear=Dear {0}, <br><br>
 email.newUser.part1=You have been assigned a user profile in the MARLO platform\n\n
