Issue #166 - outcomes list in monitoring section

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -402,6 +402,9 @@ deliverable.action.deliverablesEndDate=End year
 deliverable.action.documents=There are not Document(s) added yet.
 deliverable.action.documents.link= Document {0} Link.
 
+## Monitoring -- Outcomes
+outcomeList.status=Status
+
 ## email dear
 email.dear=Dear {0}, <br><br>
 email.newUser.part1=You have been assigned a user profile in the MARLO platform\n\n
