--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -219,7 +219,11 @@ breadCrumb.menu.outcomesList=Outcomes List
 breadCrumb.menu.outcome=Outcome
 breadCrumb.menu.outputsList=Outputs List
 breadCrumb.menu.output=Output
- breadCrumb.menu.deliverables=Deliverable list
+breadCrumb.menu.deliverables=Deliverable list
+breadCrumb.menu.home=Home
+breadCrumb.menu.projectsList=Projects List
+breadCrumb.menu.projectDescription=Project Description
+breadCrumb.menu.projectPartners=Project Partners
 
 ## IMPACT PATHWAY----
 
@@ -451,9 +455,6 @@ projectBudgetCofinaning.requeried.amount=Institution {0}: Project Bilateral P{1}
 #Research Area Section
 research.area.menu=Research Programs
 
-breadCrumb.menu.home=Home
-breadCrumb.menu.projectsList=Projects List
-breadCrumb.menu.projectDescription=Project Description
 
 #Delete
 deleting.success=Deleted successfully.
