--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -366,8 +366,8 @@ projectDescription.crossCuttingDimensions=Cross cutting theme
 projectDescription.notFundingSource=There are not funding source(s) added yet.
 projectDescription.notOutputs=There are not output(s) added yet.
 projectDescription.name=Title
-projectDescription.shortName=CIAT short name
-projectDescription.pl=PI(Principal Investigator)
+projectDescription.shortName=Short name
+projectDescription.pl=Principal investigator (PI)
 projectDescription.startDate=Star date
 projectDescription.endDate=End date
 projectDescription.contactPerson=Project contact(Project leader)
