temporally deleted the welcome message. in the index (login) page. issue #180

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -190,7 +190,7 @@ notifications.simpleNotification.message.placeholder=Message that users logged w
 
 
 ## Login Section
-login.marloTitle=Welcome to Managing Agricultural Research for Learning and Outcomes
+login.marloTitle=Welcome to Monitoring Learning and Evaluation.
 login.marloDescription=<p>MARLO is an online platform assisting CIAT research areas and their programs in their strategic results-based program planning and reporting. </p><p>It covers program cycle from planning to reporting, learning, and outcome-focused programmatic report generation with some additional synthesis at the flagship and cross-cutting level.</p>
 login.crp=
 login.email=Email
@@ -370,7 +370,7 @@ projectDescription.shortName=Short name
 projectDescription.pl=Principal investigator (PI)
 projectDescription.startDate=Star date
 projectDescription.endDate=End date
-projectDescription.contactPerson=Project contact(Project leader)
+projectDescription.contactPerson=Project contact (Project leader)
 projectDescription.fundingSource=Funding Source(s)
 projectDescription.crossCutting=Cross cutting theme
 projectDescription.outputs=Project output(s)
