Working in Short Name Impact Pathway Sections. issue #176

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -240,15 +240,19 @@ impactPathway.menu.hrefNextUsers=Next-users
 
 ## Research topics
 researchTopic.name=Name
+researchTopic.shortName=Short Name
+
 
 ## Research topics Action
 researchTopic.action.description.required=Research Topic {0} Description
+researchTopic.action.shortName.required=Research Topic {0} Short Name
 researchTopic.action.required=Research Topic Required.
 researchTopic.action.draft=Draft
 
 ## Program Impacts
 programImpact.programImpact=Program Impact
 programImpact.name=Program Impact Title
+programImpact.shortName=Short Name
 programImpact.name.readText=Program Impact Title
 programImpact.targetYear=Estimated Target Year
 programImpact.objectiveValue=This Program Impact will contribute to the following CIAT Strategic Objectives (please select)
@@ -270,6 +274,7 @@ programImpact.objectiveValue.readText=Strategic Objectives this Program Impact w
 programImpact.action.required= Program Impact Required.
 programImpact.action.draft= Draft
 programImpact.action.description.required=Program Impact {0} There is not a Description.
+programImpact.action.shortName.required=Program Impact {0} There is not a Short Name.
 programImpact.action.year.required=Program Impact {0} Target year not Selected.
 programImpact.action.objectiveValue.empty=Program Impact {0}, There is not a Strategic Objectives selected.
 programImpact.action.beneficiary=Program Impact {0} There is not a Beneficiaries added.
@@ -291,6 +296,7 @@ programImpact.outcomeList.requiredFields=Required Fileds
 outcome.inputTargetValue.placeholder=Value
 outcome.researchImpact= Program Impact
 outcome.statement=Outcome Statement
+outcome.shortName=Short Name
 outcome.statement.readText=Outcome Statement
 outcome.year=Estimated Target year
 outcome.selectTargetUnit=Target unit
@@ -308,6 +314,7 @@ outcome.milestone.index..placeholder=Value
 
 outcome.action.impactPathway.required=Select an Research Impact
 outcome.action.statement.required=Outcome Statement
+outcome.action.shortName.required=Outcome Short Name
 outcome.action.targetYear.required=Estimated Target year
 outcome.action.targetUnit.required=Target unit
 outcome.action.value.required=Target Value
@@ -331,7 +338,9 @@ programImpact.outputList.requiredFields=Required Fields
 
 ## Program Impacts - Outputs - General Information
 output.name=Output name
+output.shortName=Short Name
 output.action.title.required=Output name
+output.action.shortName.required=Output Short Name
 output.name.readText=Output name
 output.action.nextusers=Output Next Users required
 output.action.nextusers.type=Output Next User {0} Type required
