Separate Gender and Youth Cross-Cutting Theme issue #193

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -383,6 +383,9 @@ projectDescription.contactPerson=Project contact (Project leader)
 projectDescription.fundingSource=Funding Source(s)
 projectDescription.crossCutting=Cross cutting theme
 projectDescription.outputs=Project output(s)
+projectDescription.name.readText=Project Description
+projectDescription.crossCuttingDimensions.readText=Cross cutting theme(s)
+projectDescription.outputs.readText=Project output(s)
 ## Missing Fields
 projectDescription.action.title=Project Description
 projectDescription.action.shortName=Project CIAT Short name
