fix outcomes output bugs and implement project validations to submission. issue #194

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -406,6 +406,7 @@ deliverableList.deliverablesName=Name
 deliverableList.deliverablesType=Deliverable Type
 deliverableList.deliverablesStartDate=Start year
 deliverableList.deliverablesEndDate=End year
+deliverableList.missingFields=Missing Fields
 deliverableList.deliverablesRemove=Remove
 deliverableList.none=Not defined
 deliverableList.help=
