Project Submission issue #194

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -451,15 +451,16 @@ email.project.unAssigned=This email is to kindly inform you that your {0} role i
 email.project.unAssigned.subject=[MARLO] {0} - profile change for the {1} project {2}
 email.outlookPassword=<Your Outlook Password> 
 ## email footer
-email.support=<p>Should you have any questions please do not hesitate to contact the MARLO team at the following e-mail: MARLOSupport@cgiar.org</p>
-email.bye=<br>Best regards, <br><br><b>MARLO Team</b> <br><br> <p>*** Please do not reply to this email as this is an automated notification ***</p>
-
+email.support=<p>Should you have any questions please do not hesitate to contact the MiLE team at the following e-mail: MARLOSupport@cgiar.org</p>
+email.bye=<br>Best regards, <br><br><b>MiLE Team</b> <br><br> <p>*** Please do not reply to this email as this is an automated notification ***</p>
 
 ## email submit impact
-impact.submit.email.subject=[MARLO-CIAT] The Impact Pathway of {0} has been successfully submitted
-impact.submit.email.message=Dear all,</br></br>Congratulations! <b>{0}</b> has successfully submitted the <b>Impact Pathway</b> for <b>{2}</b>. The next step would be to start the monitoring of the outputs and outcomes. For the time being, you will not be able to edit this particular impact pathway until a new cycle is re-opened in MARLO CIAT.</br></br>
+impact.submit.email.subject=[MiLE] The Impact Pathway of {0} has been successfully submitted
+impact.submit.email.message=Dear all,</br></br>Congratulations! <b>{0}</b> has successfully submitted the <b>Impact Pathway</b> for <b>{2}</b>. The next step would be to start the monitoring of the outputs and outcomes. For the time being, you will not be able to edit this particular impact pathway until a new cycle is re-opened in MiLE.</br></br>
 
-
+## email submit project
+project.submit.email.subject=[MiLE] The Project {0} has been successfully submitted
+project.submit.email.message=Dear all,</br></br>Congratulations! <b>{0}</b> has successfully submitted the <b>Project</b> <b>{2}</b>.
 
 projectBudgetCofinaning.requeried.type=Institution {0}: Project Bilateral P{1} type
 projectBudgetCofinaning.requeried.amount=Institution {0}: Project Bilateral P{1} amount
@@ -470,3 +471,7 @@ research.area.menu=Research Programs
 
 #Delete
 deleting.success=Deleted successfully.
+
+#read text
+milestone.readText=Milestone
+outcome.readText=Outcome
