Fix Feedback Issues.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -158,8 +158,8 @@ header.logout=Logout
 menu.login=Login
 menu.home=Home
 menu.impactPathway=Impact Pathway
-menu.monitoring.projects=Monitoring - Projects
-menu.monitoring.outcomes=Monitoring - Outcomes
+menu.monitoring.projects=Projects
+menu.monitoring.outcomes=Outcomes
 menu.admin=Center Admin
 menu.superadmin=System Admin
 menu.projects=Projects
@@ -207,7 +207,7 @@ login.disclaimer=<b>PLEASE NOTE</b> that by using the system, you consent to the
 ## Dashboard Section
 dashboard.decisionTree.title=What do you want to do?
 dashboard.decisionTree.defineImpact=Define Impact Pathway
-dashboard.decisionTree.startMonitoring=Build Monitoring Framework
+dashboard.decisionTree.startMonitoring=Build Monitoring Research
 dashboard.decisionTree.finishDes=...
 
 ## Breadcrumb
@@ -377,7 +377,8 @@ projectDescription.notOutputs=There are not output(s) added yet.
 projectDescription.name=Title
 projectDescription.shortName=Short name
 projectDescription.pl=Principal investigator (PI)
-projectDescription.startDate=Star date
+projectDescription.sync=Sync
+projectDescription.startDate=Start date
 projectDescription.endDate=End date
 projectDescription.contactPerson=Project contact (Project leader)
 projectDescription.fundingSource=Funding Source(s)
@@ -389,7 +390,7 @@ projectDescription.outputs.readText=Project output(s)
 ## Missing Fields
 projectDescription.action.title=Project Description
 projectDescription.action.shortName=Project CIAT Short name
-projectDescription.action.startDate=Star date
+projectDescription.action.startDate=Start date
 projectDescription.action.endDate=End date
 projectDescription.action.projectLeader=Project Leader
 projectDescription.action.crossCuttingDimensions=Cross cutting theme
