firts commit to capdev

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -160,6 +160,7 @@ menu.home=Home
 menu.impactPathway=Impact Pathway
 menu.monitoring.projects=Projects
 menu.monitoring.outcomes=Outcomes
+menu.capdev=Capacity Development
 menu.admin=Center Admin
 menu.superadmin=System Admin
 menu.projects=Projects
