Working on project locations in project description

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -387,6 +387,16 @@ projectDescription.outputs=Project output(s)
 projectDescription.name.readText=Project Description
 projectDescription.crossCuttingDimensions.readText=Cross cutting theme(s)
 projectDescription.outputs.readText=Project output(s)
+projectDescription.globalDimensionQuestion=Does this project have a global dimension?
+projectDescription.globalDimensionYes=This project <span class='blueInfo'>has</span> a global dimension
+projectDescription.globalDimensionNo=This project <span class='redInfo'>does not have </span> a global dimension
+projectDescription.regionalDimensionQuestion=Does this project have a regional dimension?
+projectDescription.regionallDimensionYes=This project <span class='blueInfo'>has</span> a regional dimension
+projectDescription.regionallDimensionNo=This project <span class='redInfo'>does not have</span> a regional dimension
+projectDescription.selectRegions=Select the regions
+projectDescription.selectRegions.readText=Regions
+projectDescription.listCountries=If the project focuses on specific countries, please list these countries
+projectDescription.listCountries.readText=Specific countries
 ## Missing Fields
 projectDescription.action.title=Project Description
 projectDescription.action.shortName=Project CIAT Short name
