trainings list view

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -160,6 +160,7 @@ menu.home=Home
 menu.impactPathway=Impact Pathway
 menu.monitoring.projects=Projects
 menu.monitoring.outcomes=Outcomes
+menu.capdev=Capacity Development
 menu.admin=Center Admin
 menu.superadmin=System Admin
 menu.projects=Projects
@@ -476,3 +477,10 @@ deleting.success=Deleted successfully.
 #read text
 milestone.readText=Milestone
 outcome.readText=Outcome
+
+
+
+# Cap Dev menu
+capdev.menu.title=CapDev
+capdev.menu.hrefCapacityDevelopment=Capacity Development
+capdev.menu.hrefStatistics=Statistics
