Solving Issue List.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -207,7 +207,7 @@ login.disclaimer=<b>PLEASE NOTE</b> that by using the system, you consent to the
 ## Dashboard Section
 dashboard.decisionTree.title=What do you want to do?
 dashboard.decisionTree.defineImpact=Define Impact Pathway
-dashboard.decisionTree.startMonitoring=Build Monitoring Research
+dashboard.decisionTree.startMonitoring=Monitoring Programs
 dashboard.decisionTree.finishDes=...
 
 ## Breadcrumb
