new capacity development interface and improved trainings list interface

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -477,3 +477,28 @@ deleting.success=Deleted successfully.
 #read text
 milestone.readText=Milestone
 outcome.readText=Outcome
+
+
+## CAPACITY DEVELOPMENT MENU
+capdev.menu.title= CapDev
+capdev.menu.hrefCapdev = Capacity Development
+capdev.menu.hrefStatistics= Statistics
+
+
+## Capacity Development -- form CapDev
+capdev.form.title=Title
+capdev.form.type=Type
+capdev.form.contactPerson=Contact person
+capdev.form.startDate=Start date
+capdev.form.endDate=End date
+capdev.form.country=Country
+capdev.form.region=Region
+capdev.form.researchArea=Research area
+capdev.form.researchProgram=Research program/Theme
+capdev.form.project=Project
+capdev.form.crp=CRP
+capdev.form.dictated=Dictated by
+capdev.form.listOfApproaches=List of approaches
+capdev.form.objectives=Objectives
+capdev.form.participants=Participants
+capdev.form.selectApproach=Select an approach
