Working in feedback issues list.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -46,6 +46,7 @@ saving.read.privileges.section=You do not have sufficient privileges to modify t
 saving.add.new={0} was successfully added to the system
 saving.justification.outcome=Justification for this outcome deletion
 saving.justification.output=Justification for this output deletion
+saving.justification.project=Justification for this project deletion
 cancel.autoSave=Version recovered
 
 
@@ -362,6 +363,8 @@ projectsList.projectLeader=Leader
 projectsList.startDate=Start date
 projectsList.endDate=End date
 projectsList.none=Not defined
+projectsList.removeProject=Remove this Project
+projectsList.cannotDelete=The Project that you are trying to delete cannot be deleted
 
 ## Monitoring - Projects menu
 projects.menu.description=Description
