--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -424,6 +424,9 @@ deliverableList.missingFields=Missing Fields
 deliverableList.deliverablesRemove=Remove
 deliverableList.none=Not defined
 deliverableList.help=
+deliverable.crossCuttingDimensions=Cross cutting theme
+deliverable.outputs=Deliverable output(s)
+deliverable.notOutputs=There are not output(s) added yet.
 ## Missing Fields
 deliverable.action.deliverablesName=Name
 deliverable.action.deliverablesType=Deliverable Type
@@ -431,6 +434,7 @@ deliverable.action.deliverablesStartDate=Start year
 deliverable.action.deliverablesEndDate=End year
 deliverable.action.documents=There are not Document(s) added yet.
 deliverable.action.documents.link= Document {0} Link.
+
 
 ## Monitoring -- Outcomes
 outcomeList.status=Status
