add capacity development interface, add deliverables interfaces

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -485,7 +485,14 @@ capdev.menu.hrefCapdev = Capacity Development
 capdev.menu.hrefStatistics= Statistics
 
 
-## Capacity Development -- form CapDev
+## Capacity Development -- 
+capdev.notObjectives=There are not outcome(s) added yet.
+capdev.notDisciplines=There are not discipline(s) added yet.
+capdev.notDeliverables=There are not deliverable(s) added yet.
+capdev.supportDocuments=There are not support document(s) added yet.
+
+
+##form CapDev
 capdev.form.title=Title
 capdev.form.type=Type
 capdev.form.contactPerson=Contact person
@@ -499,6 +506,7 @@ capdev.form.project=Project
 capdev.form.crp=CRP
 capdev.form.dictated=Dictated by
 capdev.form.listOfApproaches=List of approaches
-capdev.form.objectives=Objectives
+capdev.form.objectives=Outcomes
 capdev.form.participants=Participants
 capdev.form.selectApproach=Select an approach
+capdev.form.selectOutcome=Select an outcome
