--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -378,7 +378,11 @@ projectDescription.crossCuttingDimensions=Cross cutting theme
 projectDescription.notFundingSource=There are not funding source(s) added yet.
 projectDescription.notOutputs=There are not output(s) added yet.
 projectDescription.name=Title
+projectDescription.originalDonor=Original Donor
+projectDescription.customerDonor=Customer/Direct Donor
 projectDescription.shortName=Short name
+projectDescription.ocsCode=Project Description/Objectives
+projectDescription.extensionDate=Extension Date
 projectDescription.pl=Principal investigator (PI)
 projectDescription.sync=Sync
 projectDescription.startDate=Start date
