--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -381,7 +381,9 @@ projectDescription.name=Title
 projectDescription.originalDonor=Original Donor
 projectDescription.customerDonor=Customer/Direct Donor
 projectDescription.shortName=Short name
-projectDescription.ocsCode=Project Description/Objectives
+projectDescription.ocsCode=OCS Code
+projectDescription.description=Project Description/Objectives
+projectDescription.totalAmount=Total Amount
 projectDescription.extensionDate=Extension Date
 projectDescription.pl=Principal investigator (PI)
 projectDescription.sync=Sync
