Working on deliverables types filtering

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -433,6 +433,8 @@ deliverableList.help=
 deliverable.crossCuttingDimensions=Cross cutting theme
 deliverable.outputs=Deliverable output(s)
 deliverable.notOutputs=There are not output(s) added yet.
+deliverable.type=Type
+deliverable.subType=Sub Type
 ## Missing Fields
 deliverable.action.deliverablesName=Name
 deliverable.action.deliverablesType=Deliverable Type
