Project Location Validator.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -407,7 +407,14 @@ projectDescription.selectRegions.readText=Regions
 projectDescription.listCountries=If the project focuses on specific countries, please list these countries
 projectDescription.listCountries.readText=Specific countries
 ## Missing Fields
-projectDescription.action.title=Project Description
+projectDescription.action.ocsCode=OCS Code
+projectDescription.action.originalDonor=Original Donor
+projectDescription.action.global=Global Select
+projectDescription.action.countries=Project Countries
+projectDescription.action.region=Region Select
+projectDescription.action.regions=Project Regions
+projectDescription.action.title=Project Title
+projectDescription.action.description=Project Description
 projectDescription.action.shortName=Project CIAT Short name
 projectDescription.action.startDate=Start date
 projectDescription.action.endDate=End date
