--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -161,6 +161,7 @@ menu.home=Home
 menu.impactPathway=Impact Pathway
 menu.monitoring.projects=Projects
 menu.monitoring.outcomes=Outcomes
+menu.monitoring.summaries=Summaries
 menu.admin=Center Admin
 menu.superadmin=System Admin
 menu.projects=Projects
