--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -455,6 +455,25 @@ deliverable.action.documents.link= Document {0} Link.
 ## Monitoring -- Outcomes
 outcomeList.status=Status
 
+# Summaries dashboard
+summaries.board.options.projects=Projects
+summaries.board.options.monitoring=Monitoring
+summaries.board.options.impactPathway=Impact Pathway
+summaries.board.options.budget=Budget
+summaries.board.projectResearchCycle=Select the project research cycle\:
+summaries.board.projectResearchCycle.planning=Planning
+summaries.board.projectResearchCycle.reporting=Reporting
+summaries.board.selectReportType=Select a type of report
+summaries.board.report.ipFullReport=Full impact pathway report
+summaries.board.report.ipFullReport.description=The \u201CFull Impact pathway Report\u201D comprises of detail information of all Impact Pathway sections completed.
+summaries.board.report.fullProjectReport=Full project report
+summaries.board.report.fullProjectReport.description=The \u201CFull Project Report comprises of detail information of all sections completed.
+summaries.board.report.searchTerms=Search terms
+summaries.board.report.searchTerms.description=This report search for specific terms inside all the Projects, Partners and Deliverables.
+summaries.board.report.outputsContributionsSummary=Outputs contributions
+summaries.board.report.outputsContributionsSummary.description=
+
+
 ## email dear
 email.dear=Dear {0}, <br><br>
 email.newUser.part1=You have been assigned a user profile in the MARLO platform\n\n
