Working on summaries

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -225,6 +225,7 @@ breadCrumb.menu.home=Home
 breadCrumb.menu.projectsList=Projects List
 breadCrumb.menu.projectDescription=Project Description
 breadCrumb.menu.projectPartners=Project Partners
+breadCrumb.menu.summaries=Summaries
 
 ## IMPACT PATHWAY----
 
