--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -254,6 +254,7 @@ researchTopic.action.draft=Draft
 
 ## Program Impacts
 programImpact.programImpact=Program Impact
+programImpact.ido=SRF IDO
 programImpact.name=Program Impact Title
 programImpact.shortName=Short Name
 programImpact.name.readText=Program Impact Title
@@ -277,6 +278,7 @@ programImpact.objectiveValue.readText=Strategic Objectives this Program Impact w
 programImpact.action.required= Program Impact Required.
 programImpact.action.draft= Draft
 programImpact.action.description.required=Program Impact {0} There is not a Description.
+programImpact.action.ido.required=Program Impact {0} There is not a SRF IDO.
 programImpact.action.shortName.required=Program Impact {0} There is not a Short Name.
 programImpact.action.year.required=Program Impact {0} Target year not Selected.
 programImpact.action.objectiveValue.empty=Program Impact {0}, There is not a Strategic Objectives selected.
