search contact person from AD

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -556,8 +556,8 @@ capdev.form.researchArea=Research area
 capdev.form.researchProgram=Research program/Theme
 capdev.form.project=Project
 capdev.form.crp=CRP
-capdev.form.dictated=Dictated by
-capdev.form.listOfApproaches=List of approaches
+capdev.form.numParticipants=Num participants
+capdev.form.listOfApproaches=List of Disciplines
 capdev.form.objectives=Outcomes
 capdev.form.participants=Participants
 capdev.form.selectApproach=Select an approach
