Fixed typo in project list table

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -369,6 +369,7 @@ projectsList.endDate=End date
 projectsList.none=Not defined
 projectsList.removeProject=Remove this Project
 projectsList.cannotDelete=The Project that you are trying to delete cannot be deleted
+projectsList.delete=Remove
 
 ## Monitoring - Projects menu
 projects.menu.description=Description
