Write other srd ido, program impacts

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -255,6 +255,7 @@ researchTopic.action.draft=Draft
 ## Program Impacts
 programImpact.programImpact=Program Impact
 programImpact.ido=SRF IDO
+programImpact.otherIdo=Please write the SRF IDO
 programImpact.name=Program Impact Title
 programImpact.shortName=Short Name
 programImpact.name.readText=Program Impact Title
